--- a/jpgMaker/Properties/Resources.resx
+++ b/jpgMaker/Properties/Resources.resx
@@ -127,6 +127,9 @@
   <data name="BtnOK" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\BtnOK.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="machine_learning" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\machine_learning.jpg;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Save" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\Save.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -137,7 +140,7 @@
     <value>..\bin\Debug\robot.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="machine_learning" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\machine_learning.jpg;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="roboDance" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\roboDance.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
